[package]
name = "feishu-github-bot"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
final = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"
tokio = { version = "1", features = ["sync"] }
regex = "1"
once_cell = "1"
sysinfo = "0.33"
polodb_core = "5"